<resources>
    <string name="app_name">"owntrainer"</string>
    <string name="text_navbar_1">"Home"</string>
    <string name="text_navbar_3">"Meals"</string>
    <string name="text_navbar_4">"Progress"</string>
    <string name="stop">"Stop"</string>
    <string name="start">"Start"</string>
    <string name="food_weight">"Food weight"</string>
    <string name="protein">"Protein"</string>
    <string name="g">"(g)"</string>
    <string name="fat">"Fat"</string>
    <string name="carbs">"Carbs"</string>
    <string name="kcal">"kCal"</string>
    <string name="add_to_meal">"Add to meal"</string>
    <string name="calories">"Calories"</string>
    <string name="daily_goal">"Daily goal:"</string>
    <string name="food_search">"Food search"</string>
    <string name="age">"Age"</string>
    <string name="height">"Height"</string>
    <string name="weight">"Weight"</string>
    <string name="lifestyle">"Lifestyle"</string>
    <string name="enter_some_details">"Enter some details"</string>
    <string name="sex">"Sex"</string>
    <string name="daily_goal_description">Daily goal</string>
    <string name="settings">Settings</string>
    <string name="settings_description">Settings</string>
    <string name="back">Back</string>
    <string name="back_button">Back button</string>
    <string name="foods">Foods</string>
    <string name="title">Title</string>
    <string name="instructions">Instructions</string>
    <string name="save">Save</string>
    <string name="save_button">Save button</string>
    <string name="basic_information">Basic information</string>
    <string name="ingredient_list">Ingredient list</string>
    <string name="recipe_instructions">Recipe instructions</string>
    <string name="_50">50</string>
    <string name="previous_day_button">Previous day button</string>
    <string name="next_day_button">Next day button</string>
    <string name="select_meal_to_be_added">Select meal to be added</string>
    <string name="add_food_to_selected_meal">Add food to selected meal</string>
    <string name="kcal_per_100g">kCal per 100g</string>
    <string name="monday">Monday</string>
    <string name="march">March</string>
    <string name="_29">29</string>
    <string name="delete_meal">Delete Meal</string>
    <string name="delete_food">Delete Food</string>
    <string name="quantity_colon">Quantity:</string>
    <string name="meals_eaten">Meals eaten</string>
    <string name="sample_text">Sample Text</string>
    <string name="add_new_meal">Add new meal</string>
    <string name="recipe">Recipe</string>
    <string name="ingredients">Ingredients</string>
    <string name="nutrition">Nutrition</string>
    <string name="chart">Chart</string>
    <string name="add_food">Add food</string>
    <string name="show_more">Show more</string>
    <string name="home">Home</string>
    <string name="meals">Meals</string>
    <string name="progress">Progress</string>
    <string name="stats">Stats</string>
    <string name="profile">Profile</string>
    <string name="diaryLowercase">diary</string>
    <string name="foodsLowercase">foods</string>
    <string name="dark_theme">Dark theme</string>
    <string name="add">Add</string>
    <string name="add_food_to_meal">Add food to meal</string>
    <string name="add_meal">Add meal</string>
    <string name="create_meal">Create meal</string>
    <string name="add_meal_to_diary">Add meal to diary</string>
    <string name="snackbar_meal_deleted">Meal deleted</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="cancel">Cancel</string>
    <string name="appearance">Appearance</string>
    <string name="ok">OK</string>
    <string name="system">System</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="follow_system">Follow System</string>
    <string name="number_must_be_valid">Number must be valid</string>
    <string name="age_must_be_valid">Age must be valid</string>
    <string name="height_must_be_valid">Height must be valid</string>
    <string name="could_not_find_any_more_matching_foods">Could not find any more matching foods.</string>
    <string name="could_not_find_any_matching_foods">Could not find any matching foods.</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="sedentary">Sedentary</string>
    <string name="extra_active">Extra active</string>
    <string name="very_active">Very active</string>
    <string name="moderately_active">Moderately active</string>
    <string name="lightly_active">Lightly active</string>
    <string name="age_too_young_alert">You have to be at least 18 years old to use this app.</string>
    <string name="weight_must_be_valid">Weight must be valid</string>
    <string name="add_new_reminder">Add new reminder</string>
    <string name="kcal_per_portion">kCal per portion</string>
    <string name="delete_reminder">Delete Reminder</string>
    <string name="reminders">Reminders</string>
    <string name="new_reminder">New reminder</string>
    <string name="time">Time</string>
    <string name="select_reminder_time">Select reminder time</string>
    <string name="error">Error</string>
    <string name="reminder_with_this_time_already_exists">A reminder with specified time already exists.</string>
    <string name="daily_reminder">"Daily %1$s reminder. Open the app to log your activity."</string>
    <string name="notification_reminder_channel_id">Daily reminders</string>
    <string name="notification_channel_daily_reminders_title">Daily reminders</string>
    <string name="notification_channel_daily_reminders_description">Receive notifications about your daily reminders.</string>
    <string name="title_must_be_valid">Title must be valid</string>
    <string name="title_must_not_be_empty">Title must not be empty</string>
    <string name="reminder_with_this_title_already_exists">Reminder with this title already exists</string>
    <string name="instructions_must_not_be_empty">Instructions must not be empty</string>
    <string name="meal_with_this_title_already_exists">Meal with this title already exists</string>
    <string name="time_must_not_be_empty">Time must not be empty</string>
    <string name="quantity_must_be_valid">Quantity must be valid</string>
    <string name="quantity">Quantity</string>
    <string name="time_formatted">"%1$02d:%2$02d"</string>
    <string name="row_reminder_alarm_text">"Alarm set at %1$02d:%2$02d"</string>
    <string name="row_food_quantity">"%1$s g"</string>
    <string name="row_food_calories">"(%1$s kCal)"</string>
    <string name="row_food_protein">"Protein %1$s g"</string>
    <string name="row_food_carbs">"Carbs %1$s g"</string>
    <string name="row_food_fat">"Fat %1$s g"</string>
    <string name="row_meal_calories">"%1$s kcal per portion"</string>
    <string name="years">years</string>
    <string name="cm">(cm)</string>
    <string name="kg">(kg)</string>
    <string name="next_day">Next day</string>
    <string name="previous_day">Previous day</string>
    <string name="percent_sign">%</string>
    <string name="slash_sign">/</string>
    <string name="_100">100</string>
    <string name="_80_3">80,3</string>
    <string name="database_food_item_fragment_top_app_bar_title">"%1$s (%2$s g)"</string>
    <string name="append_percent_sign">"%1$s %%"</string>
    <string name="pie_chart_center_text">%1$s \n kCal</string>
    <string name="monday_three_letter">Mon</string>
    <string name="tuesday_three_letter">Tue</string>
    <string name="wednesday_three_letter">Wed</string>
    <string name="thursday_three_letter">Thu</string>
    <string name="friday_three_letter">Fri</string>
    <string name="saturday_three_letter">Sat</string>
    <string name="sunday_three_letter">Sun</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="unknown_error_occurred">Unknown error occurred</string>
    <string name="calories_count_formatted">%1$s / %2$s kCal</string>
    <string name="macros_count_formatted">%1$s / %2$s g</string>
    <string name="date_navigation_formatted">%1$s, %2$s %3$s</string>
    <string name="network_error">"Couldn't reach the server. Check your internet connection."</string>
    <string name="append_g">%1$s g</string>
    <string name="append_kcal">%1$s kCal</string>
</resources>